--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Prachi Kane</title>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+
   </head>
   <body>
     <noscript>Hello, Welcome to Prachi's portfolio</noscript>
@@ -45,7 +47,7 @@
     </script>
     <script type="text/javascript">
       (function(){
-          emailjs.init('HOjXc-YNsZbTL04vG');
+          emailjs.init('cLZRLd1fx2H9F4-1x');
       })();
     </script>
 
